# ReMind

./: .gitignore  CHANGES.md  LICENSE  README.md  index.html  log.txt  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release-auto-updater.yml
messages/: de.json  en.json
project.inlang/: project_id
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: app_data.rs  mod.rs  notifications.rs  reminders.rs  system_info.rs  timer.rs  tray.rs  updater.rs
src/lib/: stores.ts
src/lib/components/: Loading.svelte  ReminderApp.svelte  ReminderDialog.svelte  Settings.svelte  TitleBar.svelte
src/lib/components/ui/switch/: switch.svelte
src/lib/utils/: validation.ts
src/paraglide/: messages.ts  runtime.ts
