[package]
name = "pc-notify"
version = "1.0.0"
description = "A simple desktop application for daily reminders"
authors = ["Artjom"]
repository = "https://github.com/questxen/pc-notify-1"
rust-version = "1.77.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
